--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jade-loader": "^0.8.0",
     "run-sequence": "^1.2.2",
     "url-loader": "^0.5.7",
-    "vue": "^1.0.26",
+    "vue": "^2.0.0",
     "style-loader": "^0.13.1",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
@@ -35,7 +35,6 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "clean-webpack-plugin": "^0.1.9",
-    "colors": "^1.1.2",
     "event-stream": "^3.3.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "gulp-clean": "^0.3.2",
@@ -45,7 +44,7 @@
     "html-webpack-plugin": "^2.22.0",
     "node.extend": "^1.1.5",
     "script-ext-html-webpack-plugin": "^1.3.0",
-    "vuex": "^1.0.0-rc.2",
+    "vuex": "^2.0.0",
     "webpack-manifest-plugin": "^1.0.1"
   },
   "scripts": {
