--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-inline-source": "^2.1.0",
     "gulp-jade": "^1.1.0",
     "html-webpack-plugin": "^2.22.0",
+    "node-sass": "^3.12.5",
     "node.extend": "^1.1.5",
     "script-ext-html-webpack-plugin": "^1.3.0",
     "vuex": "^2.0.0",
