--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "jade-loader": "^0.8.0",
     "run-sequence": "^1.2.2",
     "url-loader": "^0.5.7",
-    "vue": "^2.0.0",
+    "vue": "^2.1.4",
     "style-loader": "^0.13.1",
-    "vue-hot-reload-api": "^1.3.3",
+    "vue-hot-reload-api": "^2.0.6",
+    "vue-template-compiler": "^2.1.4",
+    "vue-template-es2015-compiler": "1.3.2",
     "vue-html-loader": "^1.2.3",
     "vue-style-loader": "^1.0.0",
     "sass-loader": "^4.0.0",
-    "vue-loader": "^8.5.3",
+    "vue-loader": "^10.0.2",
     "vue-lazyload-img": "^0.1.5",
+    "vuex": "^2.0.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
@@ -44,7 +47,6 @@
     "node-sass": "^3.12.5",
     "node.extend": "^1.1.5",
     "script-ext-html-webpack-plugin": "^1.3.0",
-    "vuex": "^2.0.0",
     "webpack-manifest-plugin": "^1.0.1"
   },
   "scripts": {
