--- a/package.json
+++ b/package.json
@@ -1,62 +1,18 @@
 {
-  "name": "T-All",
-  "version": "0.1.0",
-  "description": "Task/Talent Allocation System",
-  "main": "gulpfile.js",
-  "dependencies": {
-    "babel-core": "^6.10.4",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-runtime": "^6.9.2",
-    "file-loader": "^0.9.0",
-    "css-loader": "^0.23.1",
-    "gulp-connect": "^4.1.0",
-    "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7",
-    "jade": "^1.11.0",
-    "jade-loader": "^0.8.0",
-    "run-sequence": "^1.2.2",
-    "url-loader": "^0.5.7",
-    "vue": "^2.1.4",
-    "style-loader": "^0.13.1",
-    "vue-hot-reload-api": "^2.0.6",
-    "vue-template-compiler": "^2.1.4",
-    "vue-template-es2015-compiler": "1.3.2",
-    "vue-html-loader": "^1.2.3",
-    "vue-style-loader": "^1.0.0",
-    "sass-loader": "^4.0.0",
-    "vue-loader": "^10.0.2",
-    "vue-lazyload-img": "^0.1.5",
-    "vuex": "^2.0.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "clean-webpack-plugin": "^0.1.9",
-    "event-stream": "^3.3.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-html-beautify": "^1.0.1",
-    "gulp-inline-source": "^2.1.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-jsonminify": "^1.0.0",
-    "html-webpack-plugin": "^2.22.0",
-    "node-sass": "^3.12.5",
-    "node.extend": "^1.1.5",
-    "script-ext-html-webpack-plugin": "^1.3.0",
-    "webpack-manifest-plugin": "^1.0.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/riotkkwok/T-All.git"
-  },
-  "author": "riotkkwok",
-  "license": "MIT"
+    "name": "T-All",
+    "version": "0.1.0",
+    "description": "Task/Talent Allocation System",
+    "dependencies": {
+        "koa2": "2.0.0-alpha.7",
+        "pm2": "^2.2.3"
+    },
+    "scripts": {
+        "start": "node ./bin/server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/riotkkwok/T-All.git"
+    },
+    "author": "riotkkwok",
+    "license": "MIT"
 }
