[EDIT] 移动app.js到bin目录

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "pm2": "^2.2.3"
     },
     "scripts": {
-        "start": "node ./bin/server"
+        "start": "node ./bin/app"
     },
     "repository": {
         "type": "git",
