--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Task/Talent Allocation System",
     "dependencies": {
         "koa2": "2.0.0-alpha.7",
+        "koa-bodyparser": "^4.2.0",
         "pm2": "^2.2.3",
         "mongoose": "^4.8.6"
     },
